end of the day , fix contrast bug

--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -66,7 +66,7 @@ header {
             opacity: 1;
         }
         &--active {
-            color: $color-secondary;
+            color: $color-body;
         }
     }
 
